objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating__c  /  Number_of_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Candidate__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covered_Letter__c</fullName>
        <label>Covered Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Rating__c</fullName>
        <label>Highest Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lowest_Rating__c</fullName>
        <label>Lowest Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Best_Review__c</fullName>
        <label>Number of Best Review</label>
        <summaryFilterItems>
            <field>Review__c.Rating__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Review Resume</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interview</fullName>
                </value>
                <value>
                    <fullName>Extent an Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{0000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>